enhancement: optimize AssetInfoConsumerProcess for I/O and memory efficiency; add PdfItemizerWithStreaming for improved PDF processing